<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feb_menu_layout"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/feb_menu_bg"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fb_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:padding="10dp"


                android:text="@string/add_task"
                android:textColor="@color/pink"
                android:textSize="@dimen/floating_menu_list_size" />

            <TextView
                android:id="@+id/fb_a11_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"

                android:padding="10dp"

                android:text="@string/all_task"
                android:textColor="@color/pink"
                android:textSize="@dimen/floating_menu_list_size" />

            <TextView
                android:id="@+id/fb_approve_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:padding="@dimen/feb_list_padding"
                android:text="@string/approve_task"
                android:textColor="@color/pink"
                android:textSize="@dimen/floating_menu_list_size" />

            <TextView
                android:id="@+id/fb_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="@dimen/feb_list_padding"
                android:text="@string/balance"
                android:textColor="@color/pink"
                android:textSize="@dimen/floating_menu_list_size" />

            <TextView
                android:id="@+id/fb_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/feb_list_padding"
                android:text="@string/goal"
                android:textColor="@color/pink"
                android:textSize="@dimen/floating_menu_list_size" />

            <TextView
                android:id="@+id/fb_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/feb_list_padding"
                android:text="@string/message"
                android:textColor="@color/pink"
                android:textSize="@dimen/floating_menu_list_size" />

        <TextView
                android:id="@+id/app_monitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:padding="@dimen/feb_list_padding"
                android:text="@string/app_monitor"
                android:textColor="@color/pink"
                android:textSize="@dimen/floating_menu_list_size" />

        </LinearLayout>


    </FrameLayout>

</LinearLayout>