<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/child_feb_menu_layout"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/feb_menu_bg"
    android:orientation="vertical">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_marginLeft="@dimen/_size10"
            android:layout_marginBottom="@dimen/_size10"
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:padding="2dp"
                android:id="@+id/child_fb_view_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/view_task"
                android:textColor="@color/pink"
                android:textSize="14sp" />

            <TextView
                android:padding="2dp"
                android:id="@+id/child_fb_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/balance"
                android:textColor="@color/pink"
                android:textSize="14sp" />

            <TextView
                android:padding="2dp"
                android:id="@+id/child_fb_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar"
                android:textColor="@color/pink"
                android:textSize="14sp" />

            <!-- <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
                 android:textSize="@dimen/floating_menu_list_size"
                 android:textColor="@color/pink"
                 android:id="@+id/child_fb_calendar"
                 android:padding="@dimen/feb_list_padding"
                 android:text=" Calendar" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
                 android:textSize="@dimen/floating_menu_list_size"
                 android:id="@+id/child_fb_profile"
                 android:textColor="@color/pink"
                 android:padding="@dimen/feb_list_padding"
                 android:text=" Profile" />-->

            <TextView
                android:padding="2dp"
                android:id="@+id/child_fb_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/child_logout"
                android:textColor="@color/pink"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_margin="3dp"
            android:visibility="visible">


        </RelativeLayout>

    </FrameLayout>

</LinearLayout>