<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.mobiledi.earnit.activity.RequestTransfer">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:textColor="@color/main_font"
                android:textSize="@dimen/check_in_text_size"
                android:background="@drawable/sign_in_round"
                android:layout_marginBottom="60dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:textAllCaps="false"
                android:text="@string/request_transfer"
                android:layout_width="150dp"
                android:layout_height="35dp" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <include
                layout="@layout/action_bar_view_add"/>

            <View
                android:layout_marginTop="10dp"
                android:background="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_description_left_right_margin"
                android:layout_marginRight="@dimen/task_description_left_right_margin"
                android:layout_marginTop="@dimen/task_description_top_margin"
                android:scrollbars="vertical"
                android:text="@string/task_despription"
                android:textAlignment="center"
                android:textColor="@color/main_font"
                android:textSize="@dimen/check_in_text_size" />


            <LinearLayout
                android:weightSum="2"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                    android:layout_gravity="right"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size"

                        android:text="@string/applices_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="right"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size"
                        android:text="@string/transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="right"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size"
                        android:text="@string/photo_required"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Repeats:"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size"
                        />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Due date:"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size"
                         />


                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_applies_to"
                        android:paddingLeft="@dimen/task_due_Date_left_padding"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size"
                        android:maxLines="1"
                        android:text=""
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />







                    <TextView
                        android:id="@+id/add_substract"
                        android:layout_width="110dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="@dimen/add_task_textview_left_margin"
                        android:background="@drawable/round_corner"
                        android:drawableEnd="@android:drawable/arrow_down_float"
                        android:gravity="center|start"
                        android:paddingLeft="@dimen/add_task_textview_left_margin"
                        android:paddingRight="5dp"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size" />

                    <TextView
                        android:layout_marginTop="3dp"
                        android:text="No"
                        android:maxLines="1"
                        android:id="@+id/task_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/task_due_Date_left_padding"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size" />
                    <TextView
                        android:id="@+id/task_due_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/task_due_Date_left_padding"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/main_font"
                        android:textSize="@dimen/check_in_text_size" />
                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
